# sundari-backend

files/: mixsundarirecords.html
sundari-ai-mix-engineer/: AAPKE_LIYE_PADHEIN.md  README.md
sundari-ai-mix-engineer/backend/: requirements.txt
sundari-ai-mix-engineer/backend/app/: main.py
sundari-ai-mix-engineer/backend/app/analysis/: detectors.py  engine.py  loader.py  metrics.py  musical_features.py  spectral.py  stereo.py
sundari-ai-mix-engineer/backend/app/api/: routes_analysis.py  routes_decision.py  routes_mix.py  routes_report.py
sundari-ai-mix-engineer/backend/app/core/: config.py  config_to_providers.py
sundari-ai-mix-engineer/backend/app/decision_engine/: context_builder.py  decision_schema.py  engine.py  provider_registry.py
sundari-ai-mix-engineer/backend/app/decision_engine/providers/: base.py  claude_provider.py  gemini_provider.py  local_llm_provider.py  openai_provider.py
sundari-ai-mix-engineer/backend/app/models/: schemas.py
sundari-ai-mix-engineer/backend/app/rendering/: dsp.py  renderer.py
sundari-ai-mix-engineer/backend/app/reporting/: knowledge_base.py  report_generator.py
sundari-ai-mix-engineer/backend/tests/: mock_provider.py  test_metrics.py  test_report_generator.py
sundari-ai-mix-engineer/docs/: PHASE_1_ARCHITECTURE.md
sundari-ai-mix-engineer/install/: com.sundari.backend.plist  setup_once.sh
sundari-ai-mix-engineer/plugin/: CMakeLists.txt
sundari-ai-mix-engineer/plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
sundari-ai-mix-engineer/plugin/Source/AI/: DecisionClient.cpp  DecisionClient.h
sundari-ai-mix-engineer/plugin/Source/DSP/: DynamicsChain.h  EQBand.h  StereoWidthProcessor.h
sundari-ai-mix-engineer/plugin/docs/: BUILD_INSTRUCTIONS_MAC.md
